--- a/intro-to-html/exercises/7d.css
+++ b/intro-to-html/exercises/7d.css
@@ -1,10 +1,11 @@
 .search-box{
   font-size: 16px;
   border-radius: 4px;
-  border-width: 0.6px;
+  border-width: 1px;
   border-style: solid;
   padding-left: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 10px;
+  border-color: gray;
 }
