--- a/intro-to-html/exercises/7f.css
+++ b/intro-to-html/exercises/7f.css
@@ -13,12 +13,13 @@ p{
 .search{
   border-radius: 5px;
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   font-size: 16px;
   width: 400px;
   padding-top: 5px;
   padding-bottom: 5px;
   margin-bottom: 20px;
+  border-color: rgb(100, 100, 100);
 }
 
 .text{
@@ -29,7 +30,7 @@ p{
   color: white;
   background-color: rgb(65, 65, 212);
   border: none;
-  font-size: 16px;
+  font-size: 20px;
   width: 400px;
   padding-top: 15px;
   padding-bottom: 15px;
