--- a/intro-to-html/exercises/9f.css
+++ b/intro-to-html/exercises/9f.css
@@ -1,45 +1,49 @@
 div{
-  width: 70px;
+  width: 200px;
   box-shadow: 0px 0px 5px grey;
-  border-radius: 2px;
 }
 
 
 img{
-  width: 70px;
-  height: 70px;
+  width: 200px;
+  height: 200px;
   object-position: right;
   object-fit: cover;
-  margin-bottom: 0px;
-  border-radius: 2px;
+  margin-bottom: 12px;
 }
 
 .name{
   font-family: arial;
   margin-top: 0px;
-  font-size: 8px;
-  margin-left: 3px;
+  font-size: 18px;
+  margin-left: 8px;
   font-weight: bold;
-  margin-bottom: 2px;
+  margin-bottom: 4px;
 }
 
 .friends{
-  font-size: 7px;
-  margin-left: 3px;
+  margin-left: 8px;
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 12px;
   color: grey;
+  font-family: arial;
+
 }
 
 button{
   background-color: rgb(85, 85, 253);
   color: white;
   border: none;
-  width: 47px;
-  height: 15px;
-  font-size: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 16px;
   margin-left: 3px;
   margin-top: 0px;
-  border-radius: 2px;
-  margin-bottom: 3px;
+  border-radius: 4px;
+  margin-left: 8px;
+  margin-bottom: 10px;
+  font-family: arial;
+
 }
