--- a/styles/header.css
+++ b/styles/header.css
@@ -26,6 +26,21 @@
   margin-left: 70px;
   margin-right: 35px;
   max-width: 500px;
+  display: flex;
+  align-items: center;
+}
+
+.search-bar{
+  flex: 1;
+}
+.search-button{
+  height: 40px;
+  width: 60px;
+}
+
+.voice-search-button{
+  height: 40px;
+  width: 40px;
 }
 
 .right-section{
