--- a/styles/header.css
+++ b/styles/header.css
@@ -21,7 +21,6 @@
 }
 
 .middle-section{
-  background-color: lightpink;
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
@@ -32,12 +31,19 @@
 
 .search-bar{
   flex: 1;
-  height: 34px;
+  height: 36px;
+  padding-left: 10px;
+  font-size: 16px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192, 192, 192);
+  border-radius: 2px;
+  box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
 }
 
 .search-bar::placeholder{
-  padding-left: 7px;
   font-family: Roboto, Arial;
+  font-size: 16px;
 }
 .search-button{
   height: 40px;
