--- a/styles/header.css
+++ b/styles/header.css
@@ -11,6 +11,7 @@
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(226, 226, 226);
+  z-index: 100;
 }
 
 .left-section{
