--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,4 +5,31 @@
   background-color: white;
   top: 55px;
   width: 72px;
+  z-index: 200;
+  padding-top: 5px;
+}
+
+
+.sidebar-link{
+  background-color: white;
+  height: 74px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.sidebar-link:hover{
+  background-color: rgb(235, 235, 235);
+  cursor: pointer;
+}
+
+.sidebar-link img{
+  height: 24px;
+  margin-bottom: 4px;
+}
+
+.sidebar-link div{
+  font-family: roboto,arial;
+  font-size: 10px;
 }
