--- a/styles/general.css
+++ b/styles/general.css
@@ -9,5 +9,7 @@ body{
   margin: 0px;
   padding-top: 80px;
   height: 1000px;
-  padding-left: 80px;
+  padding-left: 96px;
+  padding-right: 24px;
+  background-color: rgb(249, 249, 249);
 }
