--- a/styles/header.css
+++ b/styles/header.css
@@ -36,7 +36,6 @@
   max-width: 500px;
   display: flex;
   align-items: center;
-  width: 0;
 }
 
 .search-bar{
@@ -49,6 +48,7 @@
   border-color: rgb(192, 192, 192);
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+  width: 0px;
 }
 
 .search-bar::placeholder{
@@ -67,9 +67,41 @@
   margin-right: 10px;
 }
 
+.search-button, .voice-search-button, .upload-icon-container{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-button .tooltip ,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip{
+  font-family: roboto,arial;
+  position: absolute;
+  background-color: grey;
+  color: white;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 2px;
+  font-size: 12px;
+  bottom: -30px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip{
+  opacity: 1;
+}
+
 .search-icon{
   height: 25px;
-  margin-top: 4px;
 }
 
 .voice-search-button{
@@ -80,9 +112,9 @@
   background-color: rgb(245, 245, 245);
 }
 
+
 .voice-search-icon{
   height: 24px;
-  margin-top: 4px;
 }
 
 .right-section{
