--- a/styles/header.css
+++ b/styles/header.css
@@ -67,7 +67,11 @@
   margin-right: 10px;
 }
 
-.search-button, .voice-search-button, .upload-icon-container{
+.search-button, 
+.voice-search-button, 
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container{
   position: relative;
   display: flex;
   justify-content: center;
@@ -76,7 +80,9 @@
 
 .search-button .tooltip ,
 .voice-search-button .tooltip,
-.upload-icon-container .tooltip{
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip{
   font-family: roboto,arial;
   position: absolute;
   background-color: grey;
@@ -96,7 +102,9 @@
 
 .search-button:hover .tooltip,
 .voice-search-button:hover .tooltip,
-.upload-icon-container:hover .tooltip{
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip{
   opacity: 1;
 }
 
