--- a/styles/general.css
+++ b/styles/general.css
@@ -1,5 +1,4 @@
 p{
-  font-family: Roboto, Arial;
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -12,4 +11,5 @@ body{
   padding-left: 96px;
   padding-right: 24px;
   background-color: rgb(249, 249, 249);
+  font-family: roboto,arial;
 }
