--- a/styles/video.css
+++ b/styles/video.css
@@ -62,18 +62,17 @@
 
 .video-grid{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
   row-gap: 40px;
 }
 
-@media (max-width:750px) {
-  .video-grid{
+@media (max-width: 750px) {
+  .video-grid {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media (min-width:749px), (max-width:999px){
+@media (min-width:751px) and (max-width:999px){
   .video-grid{
     grid-template-columns: 1fr 1fr 1fr;
   }
